# Vessel

./: .gitignore  ARCHITECTURE.md  Analysis.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  GEMINI.md  LICENSE  README.md  README_VESSEL.md  Untitled-1.txt  VERSION.txt  agents.md  build.ps1  build.sh  prompting.md  tmp_script.py  tmp_script10.py  tmp_script11.py  tmp_script12.py  tmp_script2.py  tmp_script3.py  tmp_script4.py  tmp_script5.py  tmp_script6.py  tmp_script7.py  tmp_script8.py  tmp_script9.py  verification.md  visualiser.md  zplane-core.md  zplane_spec.md
.archive/: system-prompts-refactored.md
.archive/legacy-zplane/: ZPlaneCore.h  ZPlaneMath.h  ZPoleMath.h  emu_zplane_core.h
.archive/orphaned-files/: VectorScreen.h  VesselLookAndFeel.h
.claude/: agent-roster.md  settings.local.json
.claude/Skills/: zplane-implementer.skill
.claude/agents/: audio-forensics.md  dsp-stability-analyzer.md  fixed-point-saturation-auditor.md  glass-engine-builder.md  h-chip-archaeologist.md  h-chip-spec-guardian.md  juce-plugin-architect.md  morph-preset-cartographer.md  parameter-smoothing-engineer.md  preset-system-architect.md  realtime-audio-guardian.md
.github/workflows/: test.yml
HyperCube/: CMakeLists.txt
HyperCube/Source/: HyperCubeEditor.cpp  HyperCubeEditor.h  HyperCubeProcessor.cpp  HyperCubeProcessor.h  ZPlaneVisualizer.h
HyperCube/Source/DSP/: EmuZPlaneCore.cpp  EmuZPlaneCore.h
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ZPlaneDisplay.h
Structure/DSP/: ZPlaneCore.h
source/: HeavyConstants.h  PhysicsEngine.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SharedData.h  VesselStyle.h  ZPlaneRibbonDisplay.h  magic.sav(2).xml  magic.sav.xml
source/Components/: VesselGlassCube.cpp  VesselGlassCube.h  VesselXYPad.cpp  VesselXYPad.h
source/DSP/: AuthenticEMUEngine.h  ChaosModulator.h  EMUAuthenticTables.h  EMUStaticShapeBank.cpp  EMUStaticShapeBank.h  EmuHChipFilter.h  EmuZPlaneCore.cpp  EmuZPlaneCore.h  ExciterEngine.h  IShapeBank.h  IZPlaneEngine.h  MaterialPhysics.h  NonlinearStage.h  PresetConverter.cpp  PresetConverter.h  ZPlaneCommon.h  zplane_visualizer_math.cpp  zplane_visualizer_math.h
source/UI/: FragileBrutalism.h  HeavyBar.h  HeavyComponents.h  RadarScope.h
source/Utility/: AVX2_SPH_Kernels.h  WaitFreeTripleBuffer.h
tests/: CMakeLists.txt  grey_box_diagnostic.cpp  grey_box_test.cpp  visualiser_integration_test.cpp  zplane_core_test.cpp
tests/integration/: Test_VesselProcessor.cpp
tests/unit/: Test_EMUStaticShapeBank.cpp  Test_PresetConverter.cpp  Test_WaitFreeTripleBuffer.cpp
vessel-ui/: index.html  package-lock.json  package.json
vessel-ui/src/: App.jsx  VesselFinalShippable.jsx  index.css
vessel-ui/vessel-local/: index.html  package-lock.json  package.json
vessel-ui/vessel-local/ferrofluid-synth/: index.html  package-lock.json  package.json
vessel-ui/vessel-local/src/: App.jsx  index.css  main.jsx
